# evaluator-v2

./: Cargo.toml  Dockerfile  README.md  build.dockerfile  docker-compose.yml  docker-entry.sh
.docker/: entry.sh  lang-versions.sh
.github/workflows/: build.yml
.work/kontestis-6e3eebe73335da3f68992337205fd075/: .stdin
src/: environment.rs  main.rs  tracing.rs  util.rs
src/evaluate/: compilation.rs  language.rs  mod.rs  output.rs  queue_handler.rs  runnable.rs
src/evaluate/types/: batch.rs  interactive.rs  mod.rs  output_only.rs
src/isolate/: meta.rs  mod.rs
src/messages/: handler.rs  mod.rs
src/redis/: mod.rs
src/state/: mod.rs
src/util/: fd.rs  general.rs  mod.rs
